Corrected z-index

--- a/Lesson_14_BirthdayCard/styles/cat.scss
+++ b/Lesson_14_BirthdayCard/styles/cat.scss
@@ -55,7 +55,7 @@ body {
 
 // CAT ANIMATION
 .cat {
-    z-index: -5;
+    z-index: -1;
     position: absolute;
     bottom: -40px;
     left: 50px;
@@ -329,7 +329,7 @@ body {
 // BALLOONS
 .balloons {
     position: relative;
-    z-index: 1;
+    z-index: -2;
 }
 
 .b-red {
@@ -367,6 +367,8 @@ body {
 
 .b-green {
     animation: balloon-anim 15s ease-in-out infinite;
+
+    z-index: -1;
 
     position: absolute;
     background-color: #94d82d;
@@ -490,6 +492,7 @@ body {
     left: 50%;
     transform: translate(-50%);
     transform-origin: left;
+    z-index: -2;
 }
 
 .text {
@@ -529,6 +532,7 @@ body {
     width: 100%;
     height: 60%;
     top: -24%;
+    z-index: -3;
 }
 
 .cloud-1 {
